# autosub

./: README.md  pyproject.toml  requirements.txt  setup.py
autosub/: __init__.py  __main__.py  autosub.py  utils.py
src/autosub/: autosub.py  main.py  utils.py
